--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "framer-motion": "^6.5.1",
+    "js-cookie": "^3.0.1",
+    "mongoose": "^6.4.4",
     "next": "12.2.2",
+    "next-auth": "^4.10.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
+    "react-toastify": "^9.0.5",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "eslint": "8.19.0",
