--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "next": "12.2.2",
     "next-auth": "^4.10.0",
     "react": "18.2.0",
+    "react-collapsible": "^2.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.33.1",
+    "react-icons": "^4.4.0",
     "react-select": "^5.4.0",
     "react-toastify": "^9.0.5",
     "sass": "^1.53.0"
