--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^6.5.1",
+    "hamburger-react": "^2.5.0",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.4.4",
     "next": "12.2.2",
