--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.35",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^6.5.1",
