--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@react-google-maps/api": "^2.12.2",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^6.5.1",
@@ -20,13 +21,16 @@
     "next-auth": "^4.10.0",
     "react": "18.2.0",
     "react-collapsible": "^2.10.0",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "18.2.0",
+    "react-geocode": "^0.2.3",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-select": "^5.4.0",
     "react-toastify": "^9.0.5",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
