--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^4.4.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-select": "^5.4.0",
+    "react-spinners": "^0.13.4",
     "react-toastify": "^9.0.5",
     "sass": "^1.53.0",
     "use-places-autocomplete": "^4.0.0"
