--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@hookform/resolvers": "^2.9.8",
     "@react-google-maps/api": "^2.12.2",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
@@ -31,7 +32,8 @@
     "react-spinners": "^0.13.4",
     "react-toastify": "^9.0.5",
     "sass": "^1.53.0",
-    "use-places-autocomplete": "^4.0.0"
+    "use-places-autocomplete": "^4.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
